@@ -1,3 +1,8 @@
+2013-10-23  Denys Vlasenko
+
+	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_calculate_sik): Fix
+	big endian bug.
+	
 2013-09-24  Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-sel.8.pre.in: Add note about very verbose output.
